--- a/MessageBoard/MessageBoard/Views/Guestbooks/_Create.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/_Create.cshtml
@@ -12,5 +12,5 @@
         <input type="text" class="form-control" asp-for="Content" autocomplete="false" />
         <span asp-validation-for="Content" class="text-danger small"></span>
     </div>
-    <button type="submit" class="btn btn-primary">新增留言</button>
+    <button type="submit" class="btn btn-primary btn-sm">新增留言</button>
 </form>
