--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -12,27 +12,28 @@
 <h2>留言板</h2>
 @if (Model != null && Model.Any())
 {
-    <table class="table">
-        <thead>
+    <table class="table table-striped">
+        <thead class="thead-light">
             <tr>
-                <th>
+                <th scope="col">
                     #
                 </th>
-                <th>
+                <th scope="col">
                     @Html.DisplayNameFor(model => model.First().Name)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.First().CreateTime)
                 </th>
-                <th>
+                <th scope="col">
                     @Html.DisplayNameFor(model => model.First().Content)
                 </th>
-                <th>
+                <th scope="col">
                     @Html.DisplayNameFor(model => model.First().Reply)
                 </th>
-                <th>
+                <th scope="col">
                     @Html.DisplayNameFor(model => model.First().ReplyTime)
                 </th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
@@ -40,9 +41,7 @@
             {
                 rowIndex++;
                 <tr>
-                    <td>
-                        @rowIndex
-                    </td>
+                    <th scope="row">@rowIndex</th>
                     <td>
                         @item.Name
                     </td>
@@ -57,6 +56,10 @@
                     </td>
                     <td>
                         @item.ReplyTime
+                    </td>
+                    <td>
+                        <a type="button" class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">修改留言</a>
+                        <a type="button" class="btn btn-secondary btn-sm" asp-action="Reply" asp-route-id="@item.Id">回覆留言</a>
                     </td>
                 </tr>
             }
