--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -60,6 +60,7 @@
                     <td>
                         <a type="button" class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">修改留言</a>
                         <a type="button" class="btn btn-secondary btn-sm" asp-action="Reply" asp-route-id="@item.Id">回覆留言</a>
+                        <a type="button" class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">刪除留言</a>
                     </td>
                 </tr>
             }
