--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model MessageBoard.ViewModels.Guestbooks.Index
+﻿@using X.PagedList.Mvc.Core; @*import this so we get our HTML Helper*@
+@using X.PagedList;
+@using X.PagedList.Mvc.Core.Common
+@inject MessageBoard.Helpers.IConfigHelper _configHelper
+@model MessageBoard.ViewModels.Guestbooks.Index
 
 @{
     ViewBag.Title = "Index";
@@ -82,6 +86,14 @@
             }
         </tbody>
     </table>
+    @Html.PagedListPager((IPagedList)Model.DataList, page => Url.Action("Index", new { page, search = Model.Search }), new PagedListRenderOptions
+    {
+        PageClasses = new string[] { "page-link" },
+        UlElementClasses = new string[] { "pagination" },
+        LiElementClasses = new string[] { "page-item" },
+        DisplayPageCountAndCurrentLocation = true,
+        PageCountAndCurrentLocationFormat = _configHelper.Get("PageCountAndCurrentLocationFormat")
+    })
 }
 else
 {
@@ -93,6 +105,7 @@ else
 
 @section Style {
     <link rel="stylesheet" href="~/lib/toastr/build/toastr.min.css" />
+    <link rel="stylesheet" href="~/css/PagedList.min.css" />
 }
 
 @section Scripts {
