--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using X.PagedList.Mvc.Core; @*import this so we get our HTML Helper*@
 @using X.PagedList;
 @using X.PagedList.Mvc.Core.Common
-@inject MessageBoard.Helpers.IConfigHelper _configHelper
+@inject MessageBoard.Misc.WebConfig _webConfig
 @model MessageBoard.ViewModels.Guestbooks.Index
 
 @{
@@ -92,7 +92,7 @@
         UlElementClasses = new string[] { "pagination" },
         LiElementClasses = new string[] { "page-item" },
         DisplayPageCountAndCurrentLocation = true,
-        PageCountAndCurrentLocationFormat = _configHelper.Get("PageCountAndCurrentLocationFormat")
+        PageCountAndCurrentLocationFormat = _webConfig.Pagination.PageCountAndCurrentLocationFormat
     })
 }
 else
