--- a/MessageBoard/MessageBoard/Views/Guestbooks/Edit.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Edit.cshtml
@@ -12,10 +12,10 @@
         <table class="table">
             <tr>
                 <td>
-                    <label asp-for="Name"></label>
+                    <label asp-for="Account"></label>
                 </td>
                 <td>
-                    <input type="text" class="form-control" asp-for="Name" readonly="@(true)" />
+                    <input type="text" class="form-control" asp-for="Account" readonly="@(true)" />
                 </td>
             </tr>
             <tr>
@@ -35,11 +35,11 @@
         <table class="table">
             <tr>
                 <td>
-                    <label asp-for="Name"></label>
+                    <label asp-for="Account"></label>
                 </td>
                 <td>
-                    <input type="text" class="form-control" asp-for="Name" autocomplete="false" />
-                    <span asp-validation-for="Name" class="text-danger small"></span>
+                    <input type="text" class="form-control" asp-for="Account" autocomplete="false" />
+                    <span asp-validation-for="Account" class="text-danger small"></span>
                 </td>
             </tr>
             <tr>
