--- a/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
@@ -14,7 +14,7 @@
                 #
             </th>
             <th scope="col">
-                @Html.DisplayNameFor(model => model.DataList.First().Name)
+                @Html.DisplayNameFor(model => model.DataList.First().Account)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DataList.First().CreateTime)
@@ -38,7 +38,7 @@
             <tr>
                 <th scope="row">@rowIndex</th>
                 <td>
-                    @item.Name
+                    @item.Account
                 </td>
                 <td>
                     @item.CreateTime
