--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using X.PagedList.Mvc.Core; @*import this so we get our HTML Helper*@
 @using X.PagedList;
 @using X.PagedList.Mvc.Core.Common
-@inject MessageBoard.Misc.WebConfig _webConfig
+@inject MessageBoard.Models.WebConfig _webConfig
 @model MessageBoard.ViewModels.Guestbooks.Index
 
 @{
