--- a/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using X.PagedList.Mvc.Core;
 @using X.PagedList;
 @using X.PagedList.Mvc.Core.Common
-@inject MessageBoard.Misc.WebConfig _webConfig
+@inject MessageBoard.Models.WebConfig _webConfig
 @model MessageBoard.ViewModels.Guestbooks.Index
 @{
     var rowIndex = 0;
