--- a/MessageBoard/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/MessageBoard/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Guestbooks" asp-action="Index">Guestbooks</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Logout">登出</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
