--- a/MessageBoard/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/MessageBoard/Views/Shared/_Layout.cshtml
@@ -28,12 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Guestbooks" asp-action="Index">Guestbooks</a>
                         </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Logout">登出</a>
-                            </li>
-                        }
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
