--- a/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Index.cshtml
@@ -14,6 +14,8 @@
 
 <h2>留言板</h2>
 
+@Html.Raw(MessageBoard.Helpers.StatusMessageHelper.RenderMessage())
+
 <form id="SearchForm" asp-action="Index" method="get">
     <div class="row d-flex align-items-center justify-content-center">
         <div class="col-1">
