--- a/MessageBoard/MessageBoard/Views/Guestbooks/_Create.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/_Create.cshtml
@@ -4,8 +4,7 @@
     <h3>新增留言</h3>
     <div class="form-group">
         <label asp-for="Name"></label>
-        <input type="text" class="form-control" asp-for="Name" autocomplete="false" />
-        <span asp-validation-for="Name" class="text-danger small"></span>
+        <input type="text" class="form-control" asp-for="Name" readonly="@(true)" />
     </div>
     <div class="form-group">
         <label asp-for="Content"></label>
