--- a/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/_DataListPartial.cshtml
@@ -5,6 +5,8 @@
 @model MessageBoard.ViewModels.Guestbooks.Index
 @{
     var rowIndex = 0;
+    var canEditOrDelete = false;
+    var canReply = false;
 }
 
 <table class="table table-striped">
@@ -14,7 +16,7 @@
                 #
             </th>
             <th scope="col">
-                @Html.DisplayNameFor(model => model.DataList.First().Account)
+                @Html.DisplayNameFor(model => model.DataList.First().Member.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DataList.First().CreateTime)
@@ -35,10 +37,12 @@
         @foreach (var item in Model.DataList)
         {
             rowIndex++;
+            canEditOrDelete = item.MemberId == ViewBag.UserId;
+            canReply = !canEditOrDelete;
             <tr>
                 <th scope="row">@rowIndex</th>
                 <td>
-                    @item.Account
+                    @item.Member.Name
                 </td>
                 <td>
                     @item.CreateTime
@@ -53,9 +57,18 @@
                     @item.ReplyTime
                 </td>
                 <td>
-                    <a type="button" class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">修改留言</a>
-                    <a type="button" class="btn btn-secondary btn-sm" asp-action="Reply" asp-route-id="@item.Id">回覆留言</a>
-                    <a type="button" class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">刪除留言</a>
+                    @if (canEditOrDelete)
+                    {
+                        <a type="button" class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">修改留言</a>
+                    }
+                    @if (canReply)
+                    {
+                        <a type="button" class="btn btn-secondary btn-sm" asp-action="Reply" asp-route-id="@item.Id">回覆留言</a>
+                    }
+                    @if (canEditOrDelete)
+                    {
+                        <a type="button" class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">刪除留言</a>
+                    }
                 </td>
             </tr>
         }
