--- a/MessageBoard/MessageBoard/Views/Shared/_LoginPartial.cshtml
+++ b/MessageBoard/MessageBoard/Views/Shared/_LoginPartial.cshtml
@@ -3,6 +3,9 @@
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Logout">Hello @(User.Identity.Name)! 登出</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="ChangePassword">修改密碼</a>
+    </li>
 }
 else
 {
