ApplicationUser 替代 Member

--- a/MessageBoard/MessageBoard/Views/Guestbooks/Edit.cshtml
+++ b/MessageBoard/MessageBoard/Views/Guestbooks/Edit.cshtml
@@ -12,10 +12,10 @@
         <table class="table">
             <tr>
                 <td>
-                    <label asp-for="@Model.Member.Name"></label>
+                    <label asp-for="@Model.Creator.Name"></label>
                 </td>
                 <td>
-                    <input type="text" class="form-control" asp-for="@Model.Member.Name" readonly="@(true)" />
+                    <input type="text" class="form-control" asp-for="@Model.Creator.Name" readonly="@(true)" />
                 </td>
             </tr>
             <tr>
@@ -35,10 +35,10 @@
         <table class="table">
             <tr>
                 <td>
-                    <label asp-for="@Model.Member.Name"></label>
+                    <label asp-for="@Model.Creator.Name"></label>
                 </td>
                 <td>
-                    <input type="text" class="form-control" asp-for="@Model.Member.Name" readonly="@(true)" />
+                    <input type="text" class="form-control" asp-for="@Model.Creator.Name" readonly="@(true)" />
                 </td>
             </tr>
             <tr>
