--- a/MessageBoard/MessageBoard/Views/Members/Register.cshtml
+++ b/MessageBoard/MessageBoard/Views/Members/Register.cshtml
@@ -7,9 +7,9 @@
 
 <form id="RegisterForm" asp-action="Register" method="post">
     <div class="form-group">
-        <label asp-for="newMember.Account"></label>
-        <input type="text" class="form-control" asp-for="newMember.Account" autocomplete="false" />
-        <span asp-validation-for="newMember.Account" class="text-danger small"></span>
+        <label asp-for="Account"></label>
+        <input type="text" class="form-control" asp-for="Account" autocomplete="false" />
+        <span asp-validation-for="Account" class="text-danger small"></span>
     </div>
     <div class="form-group">
         <label asp-for="Password"></label>
@@ -22,14 +22,14 @@
         <span asp-validation-for="PasswordCheck" class="text-danger small"></span>
     </div>
     <div class="form-group">
-        <label asp-for="newMember.Name"></label>
-        <input type="text" class="form-control" asp-for="newMember.Name" autocomplete="false" />
-        <span asp-validation-for="newMember.Name" class="text-danger small"></span>
+        <label asp-for="Name"></label>
+        <input type="text" class="form-control" asp-for="Name" autocomplete="false" />
+        <span asp-validation-for="Name" class="text-danger small"></span>
     </div>
     <div class="form-group">
-        <label asp-for="newMember.Email"></label>
-        <input type="email" class="form-control" asp-for="newMember.Email" autocomplete="false" />
-        <span asp-validation-for="newMember.Email" class="text-danger small"></span>
+        <label asp-for="Email"></label>
+        <input type="email" class="form-control" asp-for="Email" autocomplete="false" />
+        <span asp-validation-for="Email" class="text-danger small"></span>
     </div>
     <button type="submit" class="btn btn-primary btn-sm">註冊</button>
     <div asp-validation-summary="ModelOnly" class="text-danger small"></div>
